--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/app --watch server",
-    "test": "mocha --compilers js:babel-core/register --require ./test/setup.js 'src/**/*spec.js'",
+    "test": "mocha --compilers js:babel-core/register --require ./front/test/setup.js 'front/src/**/*spec.js'",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "chai": "^3.5.0",
     "chance": "^1.0.4",
     "enzyme": "^2.4.1",
+    "expect": "^1.20.2",
     "exports-loader": "^0.6.3",
     "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
@@ -35,14 +36,19 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "imports-loader": "^0.6.5",
+    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.5",
     "mocha": "^3.0.2",
+    "nock": "^8.0.0",
     "react-addons-test-utils": "^15.3.1",
-    "react-hot-loader": "^1.3.0"
+    "react-hot-loader": "^1.3.0",
+    "redux-mock-store": "^1.2.0"
   },
   "dependencies": {
     "ejs": "^2.5.1",
+    "es6-promise": "^3.2.1",
     "eslint-plugin-react": "^6.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "pg": "^6.1.0",
     "pg-helper": "0.0.8",
     "react": "^15.3.1",
