--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.5",
     "mocha": "^3.0.2",
+    "morgan": "^1.7.0",
     "nock": "^8.0.0",
     "react-addons-test-utils": "^15.3.1",
     "react-hot-loader": "^1.3.0",
@@ -46,6 +47,7 @@
   },
   "dependencies": {
     "connect-session-sequelize": "^3.1.0",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "eslint-plugin-react": "^6.2.0",
