--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.1.0",
     "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "eslint-plugin-react": "^6.2.0",
@@ -59,10 +60,12 @@
     "pg-helper": "0.0.8",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-fontawesome": "^1.1.0",
+    "react-fontawesome": "^1.2.0",
+    "react-interval": "^1.3.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
+    "react-slider": "^0.7.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-notifications": "^2.1.1",
