--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.0",
+    "node-sass": "3.1.0",
     "pg-helper": "0.0.8",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
