--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "gulp-webpack": "^1.5.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.1",
@@ -54,6 +53,7 @@
     "redux-mock-store": "^1.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "cron": "^1.1.0",
