--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "redux-logger": "^2.6.1",
     "redux-notifications": "^3.0.0",
     "redux-thunk": "^2.1.0",
+    "request": "^2.76.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.24.4",
     "sinon": "^1.17.6",
