--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "eslint-plugin-standard": "^2.0.1",
     "expect": "^1.20.2",
     "exports-loader": "^0.6.3",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-webpack": "^1.5.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-webpack": "^1.5.0",
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.4.5",
@@ -49,10 +49,11 @@
     "nock": "^8.0.0",
     "react-addons-test-utils": "^15.3.1",
     "react-hot-loader": "^1.3.0",
-    "webpack": "^1.13.2",
-    "redux-mock-store": "^1.2.0"
+    "redux-mock-store": "^1.2.0",
+    "webpack": "^1.13.2"
   },
   "dependencies": {
+    "autoprefixer": "^6.5.3",
     "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
@@ -62,6 +63,8 @@
     "eslint-plugin-react": "^6.2.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "morgan": "^1.7.0",
@@ -69,6 +72,7 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.0",
     "pg-helper": "0.0.8",
+    "precss": "^1.4.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-fontawesome": "^1.2.0",
@@ -79,7 +83,7 @@
     "react-slider": "^0.7.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-notifications": "^3.0.0",
+    "redux-notifications": "^3.0.1",
     "redux-thunk": "^2.1.0",
     "request": "^2.76.0",
     "request-promise": "^4.1.1",
