--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.5.3",
+    "axios": "^0.15.3",
     "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
