--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
+    "mailgun-js": "^0.8.2",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -92,6 +93,8 @@
     "request-promise": "^4.1.1",
     "sequelize": "^3.24.4",
     "sinon": "^1.17.6",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "soundcloud": "^3.1.2",
     "whatwg-fetch": "^1.0.0"
   },
