--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "autoprefixer": "^6.5.3",
     "axios": "^0.15.3",
+    "axios-retry": "^1.2.0",
     "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
