--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
+    "keycode": "^2.1.8",
     "mailgun-js": "^0.8.2",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
