--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "body-parser": "^1.15.2",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "^1.4.3",
+    "copy-to-clipboard": "^3.0.5",
     "cron": "^1.1.0",
     "ejs": "^2.5.1",
     "es6-promise": "^3.3.1",
