--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "passport-soundcloud": "^0.2.0",
     "pg": "^6.1.0",
     "pg-helper": "0.0.8",
+    "postman-url-encoder": "^1.0.1",
     "precss": "^1.4.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
