--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "postman-url-encoder": "^1.0.1",
     "precss": "^1.4.0",
     "react": "^15.3.1",
+    "react-document-meta": "^2.1.2",
     "react-dom": "^15.3.1",
     "react-fontawesome": "^1.2.0",
     "react-interval": "^1.3.3",
