--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "is-webview": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "keycode": "^2.1.8",
